# dredd-sqlite3

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  test_dict.py  test_list.txt
runner/: sampleMutation.py  sqlancer_runner.py
sample_binary/: alter_sqlite3_info.json  alter_testfixture_info.json  analyze_sqlite3_info.json  analyze_testfixture_info.json  attach_sqlite3_info.json  attach_testfixture_info.json  auth_sqlite3_info.json  auth_testfixture_info.json  backup_sqlite3_info.json  backup_testfixture_info.json  bitvec_sqlite3_info.json  bitvec_testfixture_info.json  btmutex_sqlite3_info.json  btmutex_testfixture_info.json  callback_sqlite3_info.json  callback_testfixture_info.json  complete_sqlite3_info.json  complete_testfixture_info.json  ctime_sqlite3_info.json  ctime_testfixture_info.json  dbpage_sqlite3_info.json  dbpage_testfixture_info.json  dbstat_sqlite3_info.json  dbstat_testfixture_info.json  delete_sqlite3_info.json  delete_testfixture_info.json  fault_sqlite3_info.json  fault_testfixture_info.json  fkey_sqlite3_info.json  fkey_testfixture_info.json  fts3_aux_sqlite3_info.json  fts3_expr_sqlite3_info.json  fts3_hash_sqlite3_info.json  fts3_porter_sqlite3_info.json  fts3_snippet_sqlite3_info.json  fts3_tokenize_vtab_sqlite3_info.json  fts3_tokenizer1_sqlite3_info.json  fts3_tokenizer_sqlite3_info.json  fts3_unicode2_sqlite3_info.json  fts3_unicode_sqlite3_info.json  (+395 more)
sample_dredd_output/: sqlite3_alter_coverage  sqlite3_alter_mutation  sqlite3_alter_sqlite3.c  sqlite3_analyze_coverage  sqlite3_analyze_mutation  (+363 more)
(+2189 files in other folders)
