[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {} 

[project]
name = "dredd-sqlite3"
version = "0.0.3"
authors = [
  { name="Jonathan Foo", email="jjf120@ic.ac.uk" },
]
description = "Using Dredd mutation testing framework to generate test cases that improve mutation coverage of sqlite3"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/JonathanFoo0523/dredd-sqlite3"
Issues = "https://github.com/JonathanFoo0523/dredd-sqlite3/issues"

